# pdf_util

./: README.md  pyproject.toml
examples/: export_pdf_to_pngs.py  visually_sign_doc.py
pdf_util/: __init__.py  bytes_from_writer.py  certificate.py  crypto_sign_doc.py  doc_to_images.py  image_to_bytes.py  page_index.py  page_subset.py  page_to_bytes.py  paste_pages.py  replace_pages.py  writer_from_page_iterable.py
pdf_util/visually_sign_doc/: __init__.py  _util.py  params.py  visually_sign_doc.py  visually_sign_page.py
tests/: test_doc_to_images.py  test_page_subset.py  test_paste_pages.py  test_replace_pages.py
